--- a/HeroSection/style.css
+++ b/HeroSection/style.css
@@ -1,3 +1,7 @@
+body {
+  margin: 0;
+}
+
 .topper {
   font-size: 16px;
   line-height: 1.2em;
@@ -5,7 +9,7 @@
   text-align: inherit;
   letter-spacing: 0.1em;
   font-weight: 700;
-  color: #ff6a3e;
+  color: #F41E1E;
   margin-bottom: 0.25rem;
   display: block;
 }
@@ -13,7 +17,7 @@
 .title {
   font-size: 49px;
   font-weight: 900;
-  line-height: 1.2em;
+  line-height: 1em;
   text-align: inherit;
   max-width: 43.75rem;
   margin: 0 0 1rem 0;
@@ -32,7 +36,10 @@
 }
 
 #hero {
-  padding: 300px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
   overflow: hidden;
   position: relative;
   z-index: 1;
@@ -52,9 +59,7 @@
   width: 100%;
   max-width: 46.875rem;
 }
-#hero .title {
-  font-size: 84px;
-}
+
 #hero .title,
 #hero .text {
   color: #fafbfc;
@@ -78,7 +83,7 @@
   margin: 0;
   box-sizing: border-box;
   padding: 0 1.5rem;
-  background-color: #ff6a3e;
+  background-color: #F41E1E;
   color: #fafbfc;
   border-radius: 0.25rem;
   display: inline-block;
@@ -123,7 +128,6 @@
   z-index: -2;
 }
 #hero .background:before {
-
   content: "";
   width: 100%;
   height: 100%;
@@ -143,4 +147,68 @@
   position: absolute;
   top: 0;
   left: 0;
+}
+
+.top-bar-details {
+  color: #4E4B66;
+  font-size: 0.8rem;
+  padding: 0.5rem 1rem;
+}
+
+.top-bar-details .top-bar-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0 auto;
+}
+
+.contact-info {
+  display: flex;
+  align-items: center;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  flex: 1 1 auto;
+}
+
+.social-media {
+  display: flex;
+  align-items: center;
+  gap: 35px;
+}
+
+.top-bar-details .social-media a img {
+  width: 20px;
+  height: 20px;
+}
+
+.span-message {
+  display: flex;
+}
+
+.span-message img {
+  margin-right: 5px;
+}
+
+#company-email {
+  text-decoration: none;
+  color: inherit;
+}
+
+#slash {
+  margin-right: 1rem;
+  margin-left: 1rem;
+}
+
+@media (width > 992px)  {
+
+  #hero .title {
+    font-size: 84px; 
+  }
+
+  #hero .text {
+    font-size: 14px; 
+    max-width: 100%; 
+  }
+
 }
