--- a/HeroSection/style.css
+++ b/HeroSection/style.css
@@ -121,7 +121,7 @@ body {
 #hero .background {
   width: 100%;
   height: 100%;
-  display: block;
+  overflow: hidden;
   position: absolute;
   top: 0;
   left: 0;
@@ -147,6 +147,7 @@ body {
   position: absolute;
   top: 0;
   left: 0;
+  right: 0;
 }
 
 .top-bar-details {
@@ -200,6 +201,50 @@ body {
   margin-left: 1rem;
 }
 
+.navbar {
+ padding: 1rem 1rem;
+}
+
+.navbar .container-nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0 auto;
+}
+
+.navbar .links-nav {
+  list-style: none;
+  display: flex;
+  margin: 0;
+  padding: 0;
+}
+
+.navbar .links-nav li {
+  margin-left: 1.5rem;
+}
+
+.navbar .links-nav a {
+  text-decoration: none;
+  color: #4E4B66;
+}
+
+.navbar .call-to-action {
+  background-color: #F41E1E;
+  color: #fff;
+  padding: 0.5rem 1rem;
+  text-decoration: none;
+  font-weight: bold;
+  transition: transform 2s ease;
+}
+
+.navbar .call-to-action:hover {
+  transform: scale(1.1);
+}
+
+.menu-hamburguer {
+  display: none;
+}
+
 @media (width > 992px)  {
 
   #hero .title {
@@ -211,4 +256,15 @@ body {
     max-width: 100%; 
   }
 
+}
+
+@media (width <= 768px) {
+  .navbar .links-nav,
+  .navbar .call-to-action {
+    display: none;
+  }
+
+  .menu-hamburguer {
+    display: block;
+  }
 }
