--- a/HeroSection/style.css
+++ b/HeroSection/style.css
@@ -1,3 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto:wght@300;400&display=swap');
+* {
+  font-family: Roboto, sans-serif;
+}
+
 body {
   margin: 0;
 }
