--- a/PriceSection-Ult. Versión/style.css
+++ b/PriceSection-Ult. Versión/style.css
@@ -1,8 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto:wght@300;400&display=swap');
 body {
     display: flex;
     justify-content: center;
     align-items: center;
     background-color: #F7F7F7;
+    font-family: Roboto;
 }
 
 ul {
